--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@react-native/new-app-screen": "0.83.1",
+    "@react-navigation/bottom-tabs": "^7.9.1",
     "@react-navigation/native": "^7.1.27",
     "@react-navigation/native-stack": "^7.9.1",
+    "lucide-react-native": "^0.562.0",
     "nativewind": "^4.2.1",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "react": "19.2.0",
@@ -20,6 +22,7 @@
     "react-native-reanimated": "^4.2.1",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "^4.19.0",
+    "react-native-svg": "^15.15.1",
     "react-native-worklets": "^0.7.1",
     "tailwindcss": "^3.4.19"
   },
