--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "prettier-plugin-tailwindcss": "^0.5.14",
     "react": "19.2.0",
     "react-native": "0.83.1",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "^4.2.1",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "^4.19.0",
+    "react-native-size-matters": "^0.4.2",
     "react-native-svg": "^15.15.1",
     "react-native-worklets": "^0.7.1",
     "tailwindcss": "^3.4.19"
@@ -42,7 +44,7 @@
     "@types/react-test-renderer": "^19.1.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
-    "prettier": "2.8.8",
+    "prettier": "^3.8.0",
     "react-test-renderer": "19.2.0",
     "typescript": "^5.8.3"
   },
