--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-reanimated": "^4.2.1",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "^4.19.0",
+    "react-native-size-matters": "^0.4.2",
     "react-native-svg": "^15.15.1",
     "react-native-worklets": "^0.7.1",
     "tailwindcss": "^3.4.19"
