--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "prettier-plugin-tailwindcss": "^0.5.14",
     "react": "19.2.0",
     "react-native": "0.83.1",
+    "react-native-gifted-charts": "^1.4.67",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "^4.2.1",
     "react-native-safe-area-context": "^5.4.0",
